@@ -13,6 +13,8 @@ Version 0.9.3-dev
 
 Not yet released.
 
+- #116: handle requests which raise :exc:`~sqlalchemy.exc.IntegrityError`.
+
 Version 0.9.2
 -------------
 
